@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -39,8 +39,8 @@ public class ApacheVfsPropertiesStore extends PropertiesStore {
     private final FileObject parentDirObj;
     private final static String COMMENT = "These properties loaded using " + ApacheVfsPropertiesStore.class.getSimpleName();
 
-    private final static Function<Exception, IOException> em = e -> IOException.class.isAssignableFrom(e.getClass()) ? (IOException) e
-            : new IOException(e);
+    private final static Function<Exception, IOException> em = e -> IOException.class.isAssignableFrom(e.getClass()) ? (IOException)e
+        : new IOException(e);
 
     public ApacheVfsPropertiesStore(final String parentUri, final String childPropertiesName) throws IOException {
         final FileObject baseDir = mapChecked(() -> VFS.getManager().resolveFile(parentUri), em);
@@ -55,18 +55,18 @@ public class ApacheVfsPropertiesStore extends PropertiesStore {
     public int push(final Properties props) throws IOException {
         return mapChecked(() -> {
             final FileObject next = nextFile(getLatest(parentDirObj), parentDirObj);
-            try (OutputStream os = next.getContent().getOutputStream()) {
+            try(OutputStream os = next.getContent().getOutputStream()) {
                 props.store(os, COMMENT);
             }
-            return new Integer(getVersion(next));
-        } , em).intValue();
+            return Integer.valueOf(getVersion(next));
+        }, em).intValue();
     }
 
     @Override
     public int merge(final Properties props) throws IOException {
         return mapChecked(() -> {
             final FileObject latest = getLatest(parentDirObj);
-            if (latest == null)
+            if(latest == null)
                 return push(props);
 
             final Properties oldProps = read(latest);
@@ -75,18 +75,18 @@ public class ApacheVfsPropertiesStore extends PropertiesStore {
             newProps.putAll(props);
 
             final FileObject next = nextFile(latest, parentDirObj);
-            try (OutputStream os = next.getContent().getOutputStream()) {
+            try(OutputStream os = next.getContent().getOutputStream()) {
                 newProps.store(os, COMMENT);
             }
-            return new Integer(getVersion(next));
-        } , em).intValue();
+            return Integer.valueOf(getVersion(next));
+        }, em).intValue();
     }
 
     @Override
     public int clear(final String... props) throws IOException {
         return mapChecked(() -> {
             final FileObject latest = getLatest(parentDirObj);
-            if (latest == null)
+            if(latest == null)
                 return -1;
 
             final Properties oldProps = read(latest);
@@ -95,11 +95,11 @@ public class ApacheVfsPropertiesStore extends PropertiesStore {
             Arrays.stream(props).forEach(newProps::remove);
 
             final FileObject next = nextFile(latest, parentDirObj);
-            try (OutputStream os = next.getContent().getOutputStream()) {
+            try(OutputStream os = next.getContent().getOutputStream()) {
                 newProps.store(os, COMMENT);
             }
-            return new Integer(getVersion(next));
-        } , em).intValue();
+            return Integer.valueOf(getVersion(next));
+        }, em).intValue();
     }
 
 }
